# PageLoader

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter-and-tests-check.yml
page_loader/: __init__.py  cli.py  logger.py  progress.py
page_loader/cpu/: connector.py  downloader.py  file_system_guide.py  html_parser.py  name_converter.py  saver.py
page_loader/handler/: downloader.py  file_system_guide.py  html_parser.py  name_converter.py  saver.py
page_loader/load_processor/: downloader.py  file_system_guide.py  html_parser.py
page_loader/loading_handler/: downloader.py  file_system_guide.py  html_parser.py
page_loader/parser/: loader.py
page_loader/scripts/: run.py
tests/: auxiliary.py  test_cli.py  test_downloader.py  test_file_system_guide.py  test_html_parser.py  test_parser.py
