[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Igor Gakhov <gakhov_igor@rambler.ru>"]
packages = [
  { include = "page_loader" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: System :: Filesystems",
    "Topic :: Internet :: WWW/HTTP"
]
repository = "https://github.com/IgorGakhov/python-project-51"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.run:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
